@@ -1,3 +1,4 @@
+import JPMSPlugin.autoImport.modulePath
 import sbt._
 import sbt.Keys._
 import sbt.internal.util.ManagedLogger
@@ -94,11 +95,17 @@ object NativeImage {
     initializeAtRuntime: Seq[String]         = Seq.empty,
     initializeAtBuildtime: Seq[String]       = defaultBuildTimeInitClasses,
     mainClass: Option[String]                = None,
-    verbose: Boolean                         = false
+    mainModule: Option[String]               = None,
+    modulePath: Seq[String]                  = Seq.empty,
+    addModules: Seq[String]                  = Seq.empty,
+    verbose: Boolean                         = false,
+    symlink: Boolean                         = true,
+    shared: Boolean                          = false
   ): Def.Initialize[Task[Unit]] = Def
     .task {
-      val log       = state.value.log
-      val targetLoc = artifactFile(targetDir, name, withExtension = false)
+      val log = state.value.log
+      val targetLoc =
+        artifactFile(targetDir, name, withExtension = false, shared = shared)
 
       def nativeImagePath(prefix: Path)(path: Path): Path = {
         val base = path.resolve(prefix)
@@ -193,6 +200,20 @@ object NativeImage {
       val cpStr  = fullCp.mkString(File.pathSeparator)
       log.debug("Class-path: " + cpStr)
 
+      val mp = if (modulePath.nonEmpty) {
+        Seq("--module-path", modulePath.mkString(File.pathSeparator))
+      } else {
+        Seq()
+      }
+      val sharedOpt = if (shared) {
+        Seq("--shared")
+      } else {
+        Seq()
+      }
+      val addModulesOpt =
+        if (addModules.nonEmpty) Seq("--add-modules", addModules.mkString(","))
+        else Seq.empty
+
       val isCi       = sys.env.contains("CI")
       val verboseOpt = if (verbose || isCi) Seq("--verbose") else Seq()
       val excludeConfigsOpt =
@@ -211,6 +232,9 @@ object NativeImage {
 
       var args: Seq[String] =
         excludeConfigsOpt ++
+        mp ++
+        addModulesOpt ++
+        sharedOpt ++
         Seq("-cp", cpStr) ++
         staticParameters ++
         configs ++
@@ -226,15 +250,14 @@ object NativeImage {
         compilationTimeoutOpt ++
         Seq("-o", targetLoc.toString)
 
-      args = mainClass match {
-        case Some(main) =>
-          args ++
-          Seq(main)
-        case None =>
-          val pathToJAR =
-            (assembly / assemblyOutputPath).value.toPath.toAbsolutePath.normalize
-          args ++
-          Seq("-jar", pathToJAR.toString)
+      val pathToJAR =
+        (assembly / assemblyOutputPath).value.toPath.toAbsolutePath.normalize
+      if (mainModule.isDefined && mainClass.isDefined) {
+        args ++= Seq("--module", mainModule.get + "/" + mainClass.get)
+      } else if (mainClass.isDefined) {
+        args ++= Seq(mainClass.get)
+      } else {
+        args ++= Seq("-jar", pathToJAR.toString)
       }
 
       val targetDirValue = (Compile / target).value
@@ -266,14 +289,16 @@ object NativeImage {
         s"Started building $targetLoc native image. The output is captured."
       )
       val retCode    = process.!(processLogger)
-      val targetFile = artifactFile(targetDir, name)
+      val targetFile = artifactFile(targetDir, name, shared = shared)
       if (retCode != 0 || !targetFile.exists()) {
         log.error(s"Native Image build of $targetFile failed, with output: ")
         println(sb.toString())
-        throw new RuntimeException("Native Image build failed")
+        throw new RuntimeException(
+          s"Native Image build failed to generate $targetFile"
+        )
       }
       var msg = s"$targetLoc native image build successful."
-      if (targetDir != null) {
+      if (targetDir != null && symlink) {
         val symlinkTargetFile = artifactFile(null, name)
         if (symlinkTargetFile.exists()) {
           symlinkTargetFile.delete()
@@ -308,7 +333,9 @@ object NativeImage {
   def incrementalNativeImageBuild(
     actualBuild: TaskKey[Unit],
     name: String,
-    targetDir: File = null
+    targetDir: File           = null,
+    shared: Boolean           = false,
+    useTestClassPath: Boolean = false
   ): Def.Initialize[Task[Unit]] =
     Def.taskDyn {
       def rebuild(reason: String) = {
@@ -324,8 +351,12 @@ object NativeImage {
         }
       }
 
-      val classpath = (Compile / fullClasspath).value
-      val filesSet  = classpath.flatMap(f => f.data.allPaths.get()).toSet
+      val classpath = if (useTestClassPath) {
+        (Test / fullClasspath).value
+      } else {
+        (Compile / fullClasspath).value
+      }
+      val filesSet = classpath.flatMap(f => f.data.allPaths.get()).toSet
 
       val store =
         streams.value.cacheStoreFactory.make("incremental_native_image")
@@ -333,7 +364,7 @@ object NativeImage {
         sourcesDiff: ChangeReport[File] =>
           if (sourcesDiff.modified.nonEmpty)
             rebuild("Native Image is not up to date")
-          else if (!artifactFile(targetDir, name).exists())
+          else if (!artifactFile(targetDir, name, shared = shared).exists())
             rebuild("Native Image does not exist")
           else
             Def.task {
@@ -381,11 +412,31 @@ object NativeImage {
   def artifactFile(
     targetDir: File,
     name: String,
-    withExtension: Boolean = true
+    withExtension: Boolean = true,
+    shared: Boolean        = false
   ): File = {
     val artifactName =
-      if (withExtension && Platform.isWindows) name + ".exe"
-      else name
+      if (withExtension) {
+        if (shared) {
+          if (Platform.isWindows) {
+            name + ".dll"
+          } else {
+            if (Platform.isLinux) {
+              name + ".so"
+            } else {
+              name + ".dylib"
+            }
+          }
+        } else {
+          if (Platform.isWindows) {
+            name + ".exe"
+          } else {
+            name
+          }
+        }
+      } else {
+        name
+      }
     if (targetDir == null) {
       new File(artifactName).getAbsoluteFile()
     } else {
